applied utils/pofix.py to the aoi translation files

--- a/po/wesnoth-aoi/ca.po
+++ b/po/wesnoth-aoi/ca.po
@@ -761,7 +761,7 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:308
 msgid ""
 "Lord Erlornas never saw the blade that felled him. He died on the spot, with "
-"no a chance to issue last commands or farewells. Without him his wardens "
+"not a chance to issue last commands or farewells. Without him his wardens "
 "soon fell into confusion, and losing heart withdrew from the battle."
 msgstr ""
 "N'Erlornas mai veié la fulla que el va derrocar. Va morir a l'acte, sense "
