--- a/po/wesnoth-aoi/en@shaw.po
+++ b/po/wesnoth-aoi/en@shaw.po
@@ -729,7 +729,7 @@ msgstr "𐑕𐑱𐑝 𐑦𐑑 𐑓𐑹 𐑞 𐑥𐑸𐑗 𐑯𐑹𐑔. 𐑞𐑺 
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:308
 msgid ""
 "Lord Erlornas never saw the blade that felled him. He died on the spot, with "
-"no a chance to issue last commands or farewells. Without him his wardens "
+"not a chance to issue last commands or farewells. Without him his wardens "
 "soon fell into confusion, and losing heart withdrew from the battle."
 msgstr ""
 "𐑤𐑹𐑛 ·𐑺𐑤𐑹𐑯𐑨𐑕 𐑯𐑧𐑝𐑼 𐑕𐑷 𐑞 𐑚𐑤𐑱𐑛 𐑞𐑨𐑑 𐑓𐑧𐑤𐑛 𐑣𐑦𐑥. 𐑣𐑰 𐑛𐑲𐑛 𐑪𐑯 𐑞 𐑕𐑐𐑪𐑑, 𐑢𐑦𐑞 𐑯𐑴 𐑩 𐑗𐑭𐑯𐑕 𐑑 "
