--- a/po/wesnoth-aoi/de.po
+++ b/po/wesnoth-aoi/de.po
@@ -763,7 +763,7 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:308
 msgid ""
 "Lord Erlornas never saw the blade that felled him. He died on the spot, with "
-"no a chance to issue last commands or farewells. Without him his wardens "
+"not a chance to issue last commands or farewells. Without him his wardens "
 "soon fell into confusion, and losing heart withdrew from the battle."
 msgstr ""
 "Fürst Erlornas sah nie die Klinge, die ihn niederstreckte. Er starb auf der "
