--- a/po/wesnoth-aoi/el.po
+++ b/po/wesnoth-aoi/el.po
@@ -754,7 +754,7 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:308
 msgid ""
 "Lord Erlornas never saw the blade that felled him. He died on the spot, with "
-"no a chance to issue last commands or farewells. Without him his wardens "
+"not a chance to issue last commands or farewells. Without him his wardens "
 "soon fell into confusion, and losing heart withdrew from the battle."
 msgstr ""
 "Ο Άρχοντας Ερλόρνας ποτέ δεν είδε την λεπίδα που τον σκότωσε. Πέθανε επί "
