--- a/po/wesnoth-aoi/hu.po
+++ b/po/wesnoth-aoi/hu.po
@@ -758,7 +758,7 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:308
 msgid ""
 "Lord Erlornas never saw the blade that felled him. He died on the spot, with "
-"no a chance to issue last commands or farewells. Without him his wardens "
+"not a chance to issue last commands or farewells. Without him his wardens "
 "soon fell into confusion, and losing heart withdrew from the battle."
 msgstr ""
 "Erlornas úr sosem tudta meg, hogy kinek a pengéje mérte rá a végső csapást. "
