--- a/po/wesnoth-aoi/ja.po
+++ b/po/wesnoth-aoi/ja.po
@@ -743,7 +743,7 @@ msgstr "北への行軍のために取っておけ。この痩せた土地では
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:308
 msgid ""
 "Lord Erlornas never saw the blade that felled him. He died on the spot, with "
-"no a chance to issue last commands or farewells. Without him his wardens "
+"not a chance to issue last commands or farewells. Without him his wardens "
 "soon fell into confusion, and losing heart withdrew from the battle."
 msgstr ""
 "貴族の Erlornas は自身を切り伏せる刃を見ることはありませんでした。即死し、最"
