--- a/po/wesnoth-aoi/lt.po
+++ b/po/wesnoth-aoi/lt.po
@@ -729,7 +729,7 @@ msgstr "Palaikykite žygiui į šiaurę. Šioje nusiaubtoje žemėje mažai ką 
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:308
 msgid ""
 "Lord Erlornas never saw the blade that felled him. He died on the spot, with "
-"no a chance to issue last commands or farewells. Without him his wardens "
+"not a chance to issue last commands or farewells. Without him his wardens "
 "soon fell into confusion, and losing heart withdrew from the battle."
 msgstr ""
 "Lordas Erlornas taip ir nepamatė jį nudūrusių ašmenų. Jis mirė vietoje, "
