--- a/po/wesnoth-aoi/sk.po
+++ b/po/wesnoth-aoi/sk.po
@@ -737,7 +737,7 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:308
 msgid ""
 "Lord Erlornas never saw the blade that felled him. He died on the spot, with "
-"no a chance to issue last commands or farewells. Without him his wardens "
+"not a chance to issue last commands or farewells. Without him his wardens "
 "soon fell into confusion, and losing heart withdrew from the battle."
 msgstr ""
 "lord Erlornas nikdy nevidel čepeľ ktorá ho zabila. Zomrel na mieste, bez "
