--- a/po/wesnoth-aoi/tr.po
+++ b/po/wesnoth-aoi/tr.po
@@ -745,7 +745,7 @@ msgstr "Kuzey yolu için sakla. Bu ıssız yerde yiyecek bulmak zor olur."
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:308
 msgid ""
 "Lord Erlornas never saw the blade that felled him. He died on the spot, with "
-"no a chance to issue last commands or farewells. Without him his wardens "
+"not a chance to issue last commands or farewells. Without him his wardens "
 "soon fell into confusion, and losing heart withdrew from the battle."
 msgstr ""
 "Erlornas kendini biçen kılıcı göremedi bile. Tek hamlede öldü. Son emrini "
