--- a/po/wesnoth-aoi/zh_CN.po
+++ b/po/wesnoth-aoi/zh_CN.po
@@ -703,7 +703,7 @@ msgstr "留着北征时用吧。在这个贫瘠的郊区里几乎一无所有。
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:308
 msgid ""
 "Lord Erlornas never saw the blade that felled him. He died on the spot, with "
-"no a chance to issue last commands or farewells. Without him his wardens "
+"not a chance to issue last commands or farewells. Without him his wardens "
 "soon fell into confusion, and losing heart withdrew from the battle."
 msgstr ""
 "艾洛纳斯领主没有看到砍倒自己的那利刃。他瞬间身亡，都没有机会下达最后的命令或"
