--- a/doc/man/it/wesnoth.6
+++ b/doc/man/it/wesnoth.6
@@ -49,14 +49,20 @@ con gli altri.
 \fB\-\-bpp\fP\fI\ numero\fP
 imposta il numero di bit per pixel. Esempio: \fB\-\-bpp 32\fP
 .TP 
-\fB\-c, \-\-campaign[[<difficoltà>] <id_campagna> [<id_scenario>]]\fP
-goes directly to the campaign based on the parameters.  The difficulty is a
-number between 1 and current campaign's difficulties number.  The default
-difficulty is 1.  The scenario must be one of the campaign's child
-scenarios. The default scenario is campaign's first scenario.  \fBNote: When
-using this switch please ensure that you specify the data directory path as
-the final argument\fP aswell, otherwise the game will take the
-campaign/scenario id as the data dir.
+\fB\-c, \-\-campaign \ [<id_campaign>]\fP
+goes directly to the campaign with id <id_campaign>. A selection
+menu will appear if no id was specified.  \fBNote:\fP When using this switch
+please ensure that you specify the data directory path as the final argument
+aswell, otherwise the game will take the campaign/scenario id as the data
+dir.
+.TP 
+\fB\-\-campaign\-difficulty <difficulty>\fP
+The difficulty of the specified campaign (1 to max). If none specified, the
+campaign difficulty selection widget will appear.
+.TP 
+\fB\-\-campaign\-scenario <id_scenario>\fP
+The id of the scenario from the specified campaign. The default is the first
+scenario.
 .TP 
 \fB\-\-config\-dir\fP\fI\ nome\fP
 imposta la directory di configurazione dell'utente a \fInome\fP sotto $HOME o
