--- a/doc/man/et/wesnoth.6
+++ b/doc/man/et/wesnoth.6
@@ -48,12 +48,20 @@ teistega.
 \fB\-\-bpp\fP\fI\ arvr\fP
 määrab bittide arvu pikseli kohta. N: \fB\-\-bpp 32\fP
 .TP 
-\fB\-c, \-\-campaign[[<difficulty>] <id_campaign> [<id_scenario>]]\fP
-läheb parameetritest lähtudes otse sõjakäiku. Raskusaste on 1\-st  sõjakäigu
-maksimaalse raskusastmeni, vaikimisi on 1. Stsenaarium on üks selle
-sõjakäigu stsenaariumitest, vaikimisi esimene.  \fBMärkus: selle võtme
-kasutamisel lisa kindlasti viimase argumendina andmekataloogi asukoht\fP ,
-vastasel juhul käsitleb mäng sõjakäigu või stsenaariumi nime kataloogina.
+\fB\-c, \-\-campaign \ [<id_campaign>]\fP
+goes directly to the campaign with id <id_campaign>. A selection
+menu will appear if no id was specified.  \fBNote:\fP When using this switch
+please ensure that you specify the data directory path as the final argument
+aswell, otherwise the game will take the campaign/scenario id as the data
+dir.
+.TP 
+\fB\-\-campaign\-difficulty <difficulty>\fP
+The difficulty of the specified campaign (1 to max). If none specified, the
+campaign difficulty selection widget will appear.
+.TP 
+\fB\-\-campaign\-scenario <id_scenario>\fP
+The id of the scenario from the specified campaign. The default is the first
+scenario.
 .TP 
 \fB\-\-config\-dir\fP\fI\ nimi\fP
 määrab kasutajasätete kataloogiks  \fInimi\fP kataloogi $HOME või "My
