--- a/doc/man/gl/wesnoth.6
+++ b/doc/man/gl/wesnoth.6
@@ -50,14 +50,20 @@ demais.
 \fB\-\-bpp\fP\fI\ número\fP
 Establece a cantidade de bits por píxel. Por exemplo: \fB\-\-bpp 32\fP.
 .TP 
-\fB\-c, \-\-campaign[[<dificultade>] <identificador da campaña> [<identificador do escenario>]]\fP
-Ir directamente á campaña indicada cos parámetros empregados. A dificultade
-será un número entre «1» e a cantidade de niveis de dificultade da
-campaña. A dificultade predeterminada é «1». O escenario debe ser un dos da
-campaña. O escenario predeterminado é o primeiro da campaña. \fBNota: ao
-empregar esta opción asegúrese tamén de indicar o directorio dos datos como
-argumento final\fP, ou o xogo pensará que este é o identificador da campaña ou
-escenario.
+\fB\-c, \-\-campaign \ [<id_campaign>]\fP
+goes directly to the campaign with id <id_campaign>. A selection
+menu will appear if no id was specified.  \fBNote:\fP When using this switch
+please ensure that you specify the data directory path as the final argument
+aswell, otherwise the game will take the campaign/scenario id as the data
+dir.
+.TP 
+\fB\-\-campaign\-difficulty <difficulty>\fP
+The difficulty of the specified campaign (1 to max). If none specified, the
+campaign difficulty selection widget will appear.
+.TP 
+\fB\-\-campaign\-scenario <id_scenario>\fP
+The id of the scenario from the specified campaign. The default is the first
+scenario.
 .TP 
 \fB\-\-config\-dir\fP\fI\ nome\fP
 Define \fInome\fP coma o nome do cartafol da configuración do usuario no seu
