--- a/doc/man/id/wesnoth.6
+++ b/doc/man/id/wesnoth.6
@@ -47,14 +47,20 @@ kustommu sendiri, skenario atau kampanye, dan sebarkanlah pada orang lain.
 \fB\-\-bpp\fP\fI\ number\fP
 set nilai BitsPerPixel. Contoh: \fB\-\-bpp 32\fP
 .TP 
-\fB\-c, \-\-campaign[[<difficulty>] <id_campaign> [<id_scenario>]]\fP
-pergi langsung ke kampanye berdasarkan parameter\-parameter. Kesulitan adalah
-nomor antara 1 dan nomor kesulitan kampanye saat ini. Kesulitan standar
-adalah 1. Skenario harus menjadi salah satu dari skenario\-skenario anak
-kampanye. Skenario standar adalah skenario pertama kampanye. \fBNote: Bila
-menggunakan tombol ini pastikan bahwa anda menentukan path direktori data
-sebagai argument akhir\fP juga, jika tidak permainan akan mengambil id
-kampanye/skenario sebagai data dir.
+\fB\-c, \-\-campaign \ [<id_campaign>]\fP
+goes directly to the campaign with id <id_campaign>. A selection
+menu will appear if no id was specified.  \fBNote:\fP When using this switch
+please ensure that you specify the data directory path as the final argument
+aswell, otherwise the game will take the campaign/scenario id as the data
+dir.
+.TP 
+\fB\-\-campaign\-difficulty <difficulty>\fP
+The difficulty of the specified campaign (1 to max). If none specified, the
+campaign difficulty selection widget will appear.
+.TP 
+\fB\-\-campaign\-scenario <id_scenario>\fP
+The id of the scenario from the specified campaign. The default is the first
+scenario.
 .TP 
 \fB\-\-config\-dir\fP\fI\ name\fP
 Menentukan konfigurasi direktori pengguna ke \fInama\fP dalam $HOME atau "My
