--- a/po/wesnoth/en@shaw.po
+++ b/po/wesnoth/en@shaw.po
@@ -2278,13 +2278,13 @@ msgstr "𐑪𐑤𐑑𐑼𐑯𐑱𐑑 ·𐑢𐑧𐑕𐑯𐑷𐑔 𐑕𐑻𐑝𐑻
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:7
-msgid "DejaVuSans.ttf,Andagii.ttf,wqy-zenhei.ttc,Junicode-Regular.ttf"
-msgstr "Andagii.ttf,DejaVuSans.ttf,wqy-zenhei.ttc"
+msgid "DejaVuSans.ttf,Andagii.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf,Junicode-Regular.ttf"
+msgstr "Andagii.ttf,DejaVuSans.ttf,DroidSansJapanese.ttf,DroidSansFallbackFull.ttf"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:8
-msgid "DejaVu Sans,Andagii,WenQuanYi Zen Hei,Junicode"
-msgstr "Andagii,DejaVu Sans,WenQuanYi Zen Hei"
+msgid "DejaVu Sans,Andagii,Droid Sans Japanese,Droid Sans Fallback,Junicode"
+msgstr "Andagii,DejaVu Sans,Droid Sans Japanese,Droid Sans Fallback"
 
 #. [tip]
 #: data/hardwired/tips.cfg:4
