--- a/po/wesnoth-manpages/gl.po
+++ b/po/wesnoth-manpages/gl.po
@@ -7,19 +7,20 @@
 # Fran Diéguez <fran dot dieguez at glug dot es>, 2008, 2010.
 # Adrián Chaves Fernández <adriyetichaves@gmail.com>, 2010.
 # Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2011.
-# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011.
+# Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail.com>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "POT-Creation-Date: 2012-01-06 12:00+0100\n"
-"PO-Revision-Date: 2011-09-05 04:31+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"PO-Revision-Date: 2012-01-06 14:12+0100\n"
+"Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -108,16 +109,16 @@ msgid ""
 "Wesnoth's large community of online players. Create your own custom units, "
 "scenarios or campaigns, and share them with others."
 msgstr ""
-"Derrota a todos os líderes inimigos escollendo sabiamente as túas tropas e "
+"Derrota a todos os líderes inimigos escollendo sabiamente as tropas e "
 "xestionando coidadosamente os recursos de ouro e vilas. Todas as unidades "
-"teñen as súas propias fortalezas e debilidades. Para gañar, desprega as "
-"forzas de xeito que aproveiten completamente o seu potencial, e impide que "
-"os inimigos fagan o mesmo. A medida que as unidades consigan experiencia, "
-"adquirirán novas habilidades e volveranse máis fortes. Xoga na túa propia "
-"lingua e proba as túas habilidades contra a intelixencia artificial, ou "
-"únete á gran comunidade de xogadores do Wesnoth na rede. Crea as túas "
-"propias unidades, escenarios ou campañas personalizadas, e compárteas cos "
-"demais."
+"teñen as fortalezas e debilidades. Para gañar, desprega as túas forzas de "
+"xeito que aproveiten completamente o seu potencial, e impide que os inimigos "
+"fagan o mesmo. A medida que as unidades consigan experiencia, adquirirán "
+"novas habilidades e volveranse máis fortes. Xoga na lingua que queiras e pon "
+"a proba as túas habilidades contra a intelixencia artificial, ou únete á "
+"enorme comunidade internacional de xogadores de A batalla por Wesnoth que se "
+"reúne na Internet. Crea unidades, escenarios ou campañas personalizadas, e "
+"compárteo todo co resto da comunidade."
 
 # type: SH
 #. type: SH
@@ -141,22 +142,12 @@ msgstr "Establece a cantidade de bits por píxel. Por exemplo: B<--bpp 32>."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:49
-#, fuzzy, no-wrap
-#| msgid "B<-c, --campaign[[E<lt>difficultyE<gt>] E<lt>id_campaignE<gt> [E<lt>id_scenarioE<gt>]]>"
+#, no-wrap
 msgid "B<-c, --campaign \\ [E<lt>id_campaignE<gt>]>"
-msgstr "B<-c, --campaign[[E<lt>dificultadeE<gt>] E<lt>identificador da campañaE<gt> [E<lt>identificador do escenarioE<gt>]]>"
+msgstr "B<-c, --campaign \\ [E<lt>identificador da campañaE<gt>]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:54
-#, fuzzy
-#| msgid ""
-#| "goes directly to the campaign based on the parameters.  The difficulty is "
-#| "a number between 1 and current campaign's difficulties number.  The "
-#| "default difficulty is 1.  The scenario must be one of the campaign's "
-#| "child scenarios. The default scenario is campaign's first scenario.  "
-#| "B<Note: When using this switch please ensure that you specify the data "
-#| "directory path as the final argument> aswell, otherwise the game will "
-#| "take the campaign/scenario id as the data dir."
 msgid ""
 "goes directly to the campaign with id E<lt>id_campaignE<gt>. A selection "
 "menu will appear if no id was specified.  B<Note:> When using this switch "
@@ -164,19 +155,16 @@ msgid ""
 "aswell, otherwise the game will take the campaign/scenario id as the data "
 "dir."
 msgstr ""
-"Ir directamente á campaña indicada cos parámetros empregados. A dificultade "
-"será un número entre «1» e a cantidade de niveis de dificultade da campaña. "
-"A dificultade predeterminada é «1». O escenario debe ser un dos da campaña. "
-"O escenario predeterminado é o primeiro da campaña. B<Nota: ao empregar esta "
-"opción asegúrese tamén de indicar o directorio dos datos como argumento "
-"final>, ou o xogo pensará que este é o identificador da campaña ou escenario."
+"Ir directamente á campaña indicada co identificador indicado. Se non se "
+"indica un identificador, aparecerá un menú de escolla. B<Nota:> ao empregar "
+"esta opción asegúrese tamén de indicar o directorio dos datos como argumento "
+"final, ou asumirase que o identificador é dito directorio."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:54
-#, fuzzy, no-wrap
-#| msgid "B<--data-dir E<lt>directoryE<gt>>"
+#, no-wrap
 msgid "B<--campaign-difficulty E<lt>difficultyE<gt>>"
-msgstr "B<--data-dir E<lt>directorioE<gt>>"
+msgstr "B<--campaign-difficulty E<lt>dificultadeE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:57
@@ -184,12 +172,14 @@ msgid ""
 "The difficulty of the specified campaign (1 to max). If none specified, the "
 "campaign difficulty selection widget will appear."
 msgstr ""
+"A dificultade da campaña indicada (do 1 ao máximo). Se non se especificase, "
+"aparecería un diálogo de escolla da dificultade da campaña."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:57
 #, no-wrap
 msgid "B<--campaign-scenario E<lt>id_scenarioE<gt>>"
-msgstr ""
+msgstr "B<--campaign-scenario E<lt>identificador do escenarioE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:60
@@ -197,6 +187,8 @@ msgid ""
 "The id of the scenario from the specified campaign. The default is the first "
 "scenario."
 msgstr ""
+"O identificador do escenario da campaña indicada. De omitirse o parámetro, "
+"empregarase o primeiro escenario."
 
 # type: TP
 #. type: TP
