Updated the Latin translation.

--- a/po/wesnoth-dm/la.po
+++ b/po/wesnoth-dm/la.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-12-19 15:14+0100\n"
-"PO-Revision-Date: 2011-12-22 21:33+0100\n"
+"POT-Creation-Date: 2011-12-05 16:25+0100\n"
+"PO-Revision-Date: 2011-12-29 19:40+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
 "Language: la\n"
@@ -778,7 +778,7 @@ msgid ""
 "than he should."
 msgstr ""
 "Sane — scisne regem alterum illo nomine? Unus suasorum fidissimorum patris "
-"erat priusquam de vita nuper exivit, auris filii adhuc habeo, etsi quia "
+"erat priusquam de vita nuper exivit, aures filii adhuc habeo, etsi quia "
 "iuvenis est fortasse peius quam debes audit.  "
 
 #. [scenario]: id=05_Council_in_Weldyn
@@ -1018,7 +1018,7 @@ msgid ""
 "need protection — cost you only $fee gold!"
 msgstr ""
 "Avete, advenae! Palus periculosa est... si transire volueritis praesidio "
-"egebitis — $fee auris modo sibi stetit!"
+"egebitis — $fee nummorum modo sibi stetit!"
 
 #. [option]: speaker=Garrath
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:140
