--- a/po/wesnoth-thot/la.po
+++ b/po/wesnoth-thot/la.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3.12+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-12-23 23:36+0100\n"
+"PO-Revision-Date: 2012-01-05 02:44+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
 "Language: la\n"
@@ -64,7 +64,7 @@ msgstr "Dominus"
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:23
 msgid "(Intermediate level, 11 scenarios.)"
-msgstr "(Ordi mediocris, XI scaenaria.)"
+msgstr "(Ordo mediocris, XI scaenaria.)"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:23
@@ -178,7 +178,7 @@ msgstr "Pelmathidrol"
 #. [objective]: condition=win
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/01_At_the_East_Gate.cfg:99
 msgid "Defeat Bashnark"
-msgstr ""
+msgstr "Basnarcum vincere"
 
 #. [objective]: condition=lose
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/01_At_the_East_Gate.cfg:103
@@ -194,7 +194,7 @@ msgstr ""
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/11_The_Court_of_Karrag.cfg:159
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:421
 msgid "Death of Aiglondur"
-msgstr ""
+msgstr "Mors Aeglonduri"
 
 #. [part]
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/01_At_the_East_Gate.cfg:120
@@ -2277,7 +2277,7 @@ msgstr ""
 #. [object]: id=sorf	# Prevent it from being picked up more than once.
 #: data/campaigns/The_Hammer_of_Thursagan/utils/macros.cfg:71
 msgid "Staff of Righteous Flame"
-msgstr ""
+msgstr "Virga Flammae Iustae"
 
 #. [object]: id=sorf	# Prevent it from being picked up more than once.
 #: data/campaigns/The_Hammer_of_Thursagan/utils/macros.cfg:74
