--- a/po/wesnoth-l/en_GB.po
+++ b/po/wesnoth-l/en_GB.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-05-07 17:00-0500\n"
+"PO-Revision-Date: 2012-01-06 17:43-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -2756,19 +2756,14 @@ msgstr "Peasant Huntsman"
 
 #. [unit_type]: id=Huntsman_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:228
-#, fuzzy
-#| msgid ""
-#| "Huntsmen have spent their lives in the backwoods and swamps of their "
-#| "wilderness homes. They can bullseye wamprats and track anything that "
-#| "moves in their territory."
 msgid ""
 "Huntsmen have spent their lives in the backwoods and swamps of their "
 "wilderness homes. They can bullseye ferocious swamp rats and track anything "
 "that moves in their territory."
 msgstr ""
 "Huntsmen have spent their lives in the backwoods and swamps of their "
-"wilderness homes. They can bullseye wamprats and track anything that moves "
-"in their territory."
+"wilderness homes. They can bullseye ferocious swamp rats and track anything "
+"that moves in their territory."
 
 #. [object]: id={ID}
 #: data/campaigns/Liberty/utils/utils.cfg:54
