--- a/po/wesnoth-tutorial/es.po
+++ b/po/wesnoth-tutorial/es.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-01-03 10:40+0100\n"
-"PO-Revision-Date: 2012-01-02 00:36-0500\n"
+"POT-Creation-Date: 2012-01-06 11:47+0100\n"
+"PO-Revision-Date: 2012-01-02 19:49-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
@@ -122,7 +122,7 @@ msgid ""
 "You are standing in the keep, and your mentor Delfador is on the east side "
 "of the river."
 msgstr ""
-"Para este tutorial estás jugando con Li'sar.\n"
+"Para este tutorial estás jugando con Li’sar.\n"
 "Estás ocupando el torreón, y tu mentor Delfador está en el lado este del río."
 
 #. [event]
@@ -141,7 +141,7 @@ msgstr "Pulsa el botón izquierdo sobre Konrad"
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:411
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:533
 msgid "Left click on Li’sar"
-msgstr "Pulsa el botón izquierdo sobre Li'sar"
+msgstr "Pulsa el botón izquierdo sobre Li’sar"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:244
@@ -158,7 +158,7 @@ msgid ""
 "<big>You have selected Li’sar.</big>\n"
 "The places she can move to are highlighted."
 msgstr ""
-"<big>Has seleccionado a Li'sar.</big>\n"
+"<big>Has seleccionado a Li’sar.</big>\n"
 "Los lugares adonde puede moverse están iluminados."
 
 #. [event]
@@ -180,7 +180,7 @@ msgstr ""
 msgid ""
 "Move Li’sar next to Delfador by clicking on the tile marked <b>Here</b>."
 msgstr ""
-"Mueve a Li'sar al lado de Delfador, pulsando en el lugar marcado con "
+"Mueve a Li’sar al lado de Delfador, pulsando en la casilla marcado con "
 "<b>Aquí</b>."
 
 #. [event]
@@ -247,7 +247,7 @@ msgstr "¿Un estafermo? ¿Pretendes que luche contra un muñeco?"
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:375
 msgid "You have 32 hitpoints and a sword, boy. I’m fairly sure you’ll win."
 msgstr ""
-"Jovencito tienes 32 puntos de vida y una espada. Estoy bastante seguro de "
+"Jovencito, tienes 32 puntos de vida y una espada. Estoy bastante seguro de "
 "que ganarás."
 
 #. [message]: id=Delfador
@@ -274,7 +274,7 @@ msgid ""
 msgstr ""
 "Para atacar al estafermo, primero selecciona al atacante (Konrad) y luego al "
 "objetivo (el estafermo). Verás una descripción de los detalles del ataque. "
-"Cuando pulses <b>OK</b>, Konrad atacará."
+"Cuando pulses <b>Aceptar</b>, Konrad atacará."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:395
@@ -283,9 +283,9 @@ msgid ""
 "(the quintain). You will see an attack description. When you click <b>OK</"
 "b>, Li’sar will attack."
 msgstr ""
-"Para atacar al estafermo, primero selecciona al atacante (Li'sar) y luego al "
+"Para atacar al estafermo, primero selecciona al atacante (Li’sar) y luego al "
 "objetivo (el estafermo). Verás una descripción de los detalles del ataque. "
-"Cuando pulses <b>OK</b>, Li'sar atacará."
+"Cuando pulses <b>Aceptar</b>, Li’sar atacará."
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:406
@@ -325,8 +325,8 @@ msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Konrad) is killed."
 msgstr ""
-"Nota: la pequeña corona metálica sobre Delfador significa que perderás la "
-"partida si él muere. También perderás la partida si tu líder (Konrad) muere."
+"La pequeña corona metálica sobre Delfador significa que perderás la partida "
+"si él muere. También perderás la partida si tu líder (Konrad) muere."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:464
@@ -334,8 +334,8 @@ msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Li’sar) is killed."
 msgstr ""
-"Nota: la pequeña corona metálica sobre Delfador significa que perderás la "
-"partida si él muere. También perderás la partida si tu líder (Li'sar) muere."
+"La pequeña corona metálica sobre Delfador significa que perderás la partida "
+"si él muere. También perderás la partida si tu líder (Li’sar) muere."
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:476
@@ -377,7 +377,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:496
 msgid "Click on the <b>End Turn</b> button in the bottom right of the screen"
 msgstr ""
-"Pulsa en el botón <b>Fin de turno</b> en la parte inferior derecha de la "
+"Pulsa en el botón <b>Finalizar turno</b> en la parte inferior derecha de la "
 "pantalla"
 
 #. [message]: id=student
@@ -420,7 +420,7 @@ msgstr "Pulsa en la aldea para mover a Konrad"
 #. [event]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:543
 msgid "Click on the village to move Li’sar"
-msgstr "Pulsa en la aldea para mover a Li'sar"
+msgstr "Pulsa en la aldea para mover a Li’sar"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:561
@@ -451,7 +451,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:872
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:924
 msgid "Click on the <b>End Turn</b> button"
-msgstr "Pulsa en el botón de <b>Fin de turno</b>"
+msgstr "Pulsa en el botón de <b>Finalizar de turno</b>"
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:603
@@ -509,7 +509,7 @@ msgstr "Mueve a Konrad al torreón"
 #. [then]
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:633
 msgid "Move Li’sar to the keep"
-msgstr "Mueve a Li'sar al torreón"
+msgstr "Mueve a Li’sar al torreón"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:650
@@ -815,7 +815,7 @@ msgid ""
 msgstr ""
 "Sí, ganas más experiencia durante la batalla, especialmente matando a un "
 "oponente. Gana suficiente experiencia y te harás más poderoso.\n"
-"Ahora, Li'sar, ¡Voy a dejarte más muñecos para que practiques con ellos! "
+"Ahora, Li’sar, ¡Voy a dejarte más muñecos para que practiques con ellos! "
 "Después de ello, tenemos trabajo de verdad que hacer."
 
 #. [message]: speaker=narrator
@@ -891,7 +891,7 @@ msgid ""
 "less experience to advance a level."
 msgstr ""
 ", tu nuevo recluta, tiene dos rasgos: <i>fuerte</i> e <i>inteligente</i>. "
-"'Fuerte' quiere decir que hace más daño, e 'inteligente' significa que "
+"«Fuerte» quiere decir que hace más daño, e «inteligente» significa que "
 "requiere menos experiencia para avanzar un nivel."
 
 #. [then]
@@ -901,8 +901,8 @@ msgid ""
 " has two traits: <i>quick</i> and <i>resilient</i>. ‘Quick’ means a unit can "
 "move one tile further each turn, and ‘resilient’ means it has more hitpoints."
 msgstr ""
-" tiene dos rasgos: <i>rápido</i> y <i>resistente</i>. 'Rápido' quiere decir "
-"que puede moverse una casilla más por cada turno, y 'resistente' significa "
+" tiene dos rasgos: <i>rápido</i> y <i>resistente</i>. «Rápido» quiere decir "
+"que puede moverse una casilla más por cada turno, y «resistente» significa "
 "que tiene más puntos de vida."
 
 #. [then]
@@ -946,8 +946,8 @@ msgid ""
 "Advance other units onto the island or to capture villages, then <b>End "
 "Turn</b>"
 msgstr ""
-"Avanza otras unidades a la isla o a capturar aldeas, luego pulsa <b>Fin de "
-"turno</b>"
+"Avanza otras unidades a la isla o a capturar aldeas, luego pulsa "
+"<b>Finalizar de turno</b>"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:234
@@ -1007,7 +1007,7 @@ msgstr "Muerte de Konrad"
 #. [objective]: condition=lose
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:441
 msgid "Death of Li’sar"
-msgstr "Muerte de Li'sar"
+msgstr "Muerte de Li’sar"
 
 #. [unit]: id=Galdrad, type=Elvish Captain
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:452
@@ -1044,7 +1044,7 @@ msgstr ""
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:482
 msgid "This is no game, Li’sar! "
-msgstr "¡Esto no es un juego Li'sar! "
+msgstr "¡Esto no es un juego Li’sar! "
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:485
@@ -1248,7 +1248,7 @@ msgstr "Mueve a Konrad para capturar una aldea"
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:676
 msgid "Move Li’sar to capture a village"
-msgstr "Mueve a Li'sar para capturar una aldea"
+msgstr "Mueve a Li’sar para capturar una aldea"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:693
@@ -1392,7 +1392,7 @@ msgstr ""
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:949
 msgid "You’ve learned well, Li’sar! "
-msgstr "¡Has aprendido bien, Li'sar! "
+msgstr "¡Has aprendido bien, Li’sar! "
 
 #. [then]
 #. [event]
@@ -1425,7 +1425,7 @@ msgid ""
 "You should leave the villages near your keep for Li’sar to capture. She "
 "needs to stay nearby to recruit more units anyway."
 msgstr ""
-"Deberías dejar las aldeas cercanas a tu torreón para que Li'sar las capture, "
+"Deberías dejar las aldeas cercanas a tu torreón para que Li’sar las capture, "
 "pues necesita permanecer cerca para reclutar más unidades de todas formas."
 
 #. [event]
@@ -1541,7 +1541,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1043
 msgid "Move your Fighter and Shaman south, then return Li’sar to the keep"
 msgstr ""
-"Mueve al luchador y a la chamán al sur, luego vuelve con Li'sar al torreón"
+"Mueve al luchador y a la chamán al sur, luego vuelve con Li’sar al torreón"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1053
@@ -1566,7 +1566,7 @@ msgstr "Mueve a Konrad a otra aldea (desocupada)"
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1071
 msgid "Move Li’sar to another (unowned) village"
-msgstr "Mueve a Li'sar a otra aldea (desocupada)"
+msgstr "Mueve a Li’sar a otra aldea (desocupada)"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1096
@@ -1611,7 +1611,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1146
 msgid "Advance other units and capture villages, then <b>End Turn</b>"
 msgstr ""
-"Avanza otras unidades y captura aldeas, luego pulsa <b>Fin de turno</b>"
+"Avanza otras unidades y captura aldeas, luego pulsa <b>Finalizar de turno</b>"
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1138
@@ -1999,11 +1999,11 @@ msgid ""
 "Delfador are characters from <i>Heir to the Throne</i>."
 msgstr ""
 "¡Has vencido! Ahora, quizá quieras probar una de las campañas de nivel "
-"principiante, como: <i>La Guardia del Sur</i>, <i>Una Incursión de Orcos<i/"
-">, <i>Un Cuento de Dos Hermanos<i/> o <i>Heredero al Trono<i/>. <i>La "
-"Guardia del Sur<i/> fue diseñada específicamente como una campaña para "
-"principiantes. Konrad, Li'sar y Delfador son personajes de <i>Heredero al "
-"Trono<i/>."
+"principiante, como: <i>La guardia del sur</i>, <i>Una incursión de orcos<i/"
+">, <i>Un cuento sobre dos hermanos<i/> o <i>Heredero al trono<i/>. <i>La "
+"guardia del sur<i/> fue diseñada específicamente como una campaña para "
+"principiantes. Konrad, Li’sar y Delfador son personajes de <i>Heredero al "
+"trono<i/>."
 
 #. [unit_type]: id=Fighter, race=human
 #: data/campaigns/tutorial/units/Fighter.cfg:4
@@ -2050,7 +2050,7 @@ msgstr ""
 #. [attack]: type=impact
 #: data/campaigns/tutorial/units/Quintain.cfg:22
 msgid "flail"
-msgstr "mayal"
+msgstr "mangual"
 
 #~ msgid "Wesnoth Tutorial"
 #~ msgstr "Tutorial de Wesnoth"
