--- a/po/wesnoth-aoi/es.po
+++ b/po/wesnoth-aoi/es.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2010-07-27 17:50-0400\n"
-"Last-Translator: PeterPorty <p_llorens@hotmail.com>\n"
+"POT-Creation-Date: 2012-01-06 11:47+0100\n"
+"PO-Revision-Date: 2012-01-02 19:41-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -23,7 +23,7 @@ msgstr ""
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:11
 msgid "An Orcish Incursion"
-msgstr "Una Incursión de Orcos"
+msgstr "Una incursión de orcos"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:12
@@ -770,6 +770,12 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:308
+#, fuzzy
+#| msgid ""
+#| "Lord Erlornas never saw the blade that felled him. He died on the spot, "
+#| "with no a chance to issue last commands or farewells. Without him his "
+#| "wardens soon fell into confusion, and losing heart withdrew from the "
+#| "battle."
 msgid ""
 "Lord Erlornas never saw the blade that felled him. He died on the spot, with "
 "not a chance to issue last commands or farewells. Without him his wardens "
@@ -793,6 +799,8 @@ msgstr ""
 
 #. [message]: role=Adviser
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:323
+#, fuzzy
+#| msgid "We can’t carry on Lord, the men are to tired. We have to fall back."
 msgid "We can’t carry on Lord, the men are too tired. We have to fall back."
 msgstr ""
 "No podemos seguir Señor, los hombres están demasiado cansados. Tenemos que "
@@ -1025,6 +1033,11 @@ msgstr "¡No! ¡Esto no puede ser!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:305
+#, fuzzy
+#| msgid ""
+#| "Soon after Erlornas died the elven party, lacking a leader and pressed "
+#| "from all sides, scattered and fled. Their retreat to Wesmere was arduous "
+#| "and long."
 msgid ""
 "Soon after Erlornas died, the elven party, lacking a leader and pressed from "
 "all sides, scattered and fled. Their retreat to Wesmere was arduous and long."
