Updated the Spanish translation.

--- a/po/wesnoth-did/es.po
+++ b/po/wesnoth-did/es.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2012-01-06 17:12-0500\n"
-"Last-Translator: Diego J. <diegojromerolopez@gmail.com>\n"
+"PO-Revision-Date: 2012-01-06 20:24-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -65,9 +65,8 @@ msgstr "Conjurador"
 
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
-#, fuzzy
 msgid "(Intermediate level, 12 scenarios.)"
-msgstr "(Nivel intermedio, 11 escenarios)."
+msgstr "(Nivel intermedio, 12 escenarios.)"
 
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
@@ -79,7 +78,6 @@ msgstr ""
 "Aprenda las artes oscuras de la nigromancia para salvar a su gente de una "
 "incursión de orcos.\n"
 "\n"
-"(Nivel intermedio, 11 escenarios.)\n"
 
 #. [about]
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:25
