--- a/po/wesnoth-help/es.po
+++ b/po/wesnoth-help/es.po
@@ -23,8 +23,8 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2012-01-03 01:23+0100\n"
-"Last-Translator: Aelonin <quianaaelonin@gmail.com>\n"
+"PO-Revision-Date: 2012-01-06 20:01-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -1493,7 +1493,7 @@ msgstr ""
 "\n"
 "\n"
 "Cuando ganes un escenario, el mapa se volverá gris y el botón "
-"«<bold>text='Fin de turno'</bold>» cambiará a «<bold>text='Fin de "
+"«<bold>text='Finalizar turno'</bold>» cambiará a «<bold>text='Finalizar "
 "escenario'</bold>». Ahora puedes hacer cosas como modificar las opciones de "
 "guardado o (si estás en modo multijugador) chatear con otros jugadores antes "
 "de pulsar ese botón para avanzar."
