--- a/po/wesnoth-lib/es.po
+++ b/po/wesnoth-lib/es.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2012-01-05 02:56+0100\n"
-"Last-Translator: Aelonin <quianaaelonin@gmail.com>\n"
+"PO-Revision-Date: 2012-01-06 19:58-0500\n"
+"Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -3295,7 +3295,7 @@ msgstr "Reincorporar"
 
 #: src/hotkeys.cpp:79
 msgid "End Turn"
-msgstr "Fin de turno"
+msgstr "Finalizar turno"
 
 #: src/hotkeys.cpp:80
 msgid "Toggle Ellipses"
