--- a/po/wesnoth-tutorial/es.po
+++ b/po/wesnoth-tutorial/es.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2012-01-02 19:49-0500\n"
+"PO-Revision-Date: 2012-01-06 19:52-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: Spanish <http://wiki.wesnoth.org/SpanishTranslation>\n"
 "Language: es\n"
@@ -451,7 +451,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:872
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:924
 msgid "Click on the <b>End Turn</b> button"
-msgstr "Pulsa en el botón de <b>Finalizar de turno</b>"
+msgstr "Pulsa en el botón de <b>Finalizar turno</b>"
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:603
@@ -525,7 +525,7 @@ msgid ""
 msgstr ""
 "Cuando estés en un <i>torreón</i>, puedes <i>reclutar</i> en las casillas de "
 "castillo que haya alrededor pulsando con el botón derecho y seleccionando "
-"<b>reclutar</b>. Esta vez sólo tendrás un tipo de unidad para elegir: el "
+"<b>Reclutar</b>. Esta vez sólo tendrás un tipo de unidad para elegir: el "
 "luchador elfo."
 
 #. [event]
@@ -533,7 +533,7 @@ msgstr ""
 msgid "Right click on a castle tile and select <b>Recruit</b>"
 msgstr ""
 "Pulsa con el botón derecho en una casilla del castillo y selecciona "
-"<b>reclutar</b>."
+"<b>Reclutar</b>."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:690
@@ -711,7 +711,7 @@ msgid ""
 "You can right click on a unit to see a detailed <b>Unit Description</b>."
 msgstr ""
 "Puedes pulsar con el botón derecho del ratón sobre cualquier unidad para ver "
-"una <b>Descripción de la Unidad</b> detallada."
+"una <b>Descripción de unidad</b> detallada."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:993
@@ -865,7 +865,7 @@ msgstr ""
 "para indicar que el escenario está finalizado, pero podrás examinar las "
 "posiciones finales y el estado de tus tropas y cualquier enemigo que haya "
 "sobrevivido.  Esto es llamado <i>modo demora</i>. Cuando hayas terminado, "
-"pulsa el botón <b>Finalizar Escenario</b> para pasar al siguiente escenario "
+"pulsa el botón <b>Finalizar escenario</b> para pasar al siguiente escenario "
 "de la campaña."
 
 #. [message]: speaker=narrator
@@ -947,7 +947,7 @@ msgid ""
 "Turn</b>"
 msgstr ""
 "Avanza otras unidades a la isla o a capturar aldeas, luego pulsa "
-"<b>Finalizar de turno</b>"
+"<b>Finalizar turno</b>"
 
 #. [then]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:234
@@ -1611,7 +1611,7 @@ msgstr ""
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1146
 msgid "Advance other units and capture villages, then <b>End Turn</b>"
 msgstr ""
-"Avanza otras unidades y captura aldeas, luego pulsa <b>Finalizar de turno</b>"
+"Avanza otras unidades y captura aldeas, luego pulsa <b>Finalizar turno</b>"
 
 #. [else]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1138
