--- a/po/wesnoth-utbs/fr.po
+++ b/po/wesnoth-utbs/fr.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-12-20 01:18+0100\n"
-"Last-Translator: Gérard Bodin <bodin.gnork@gmail.com>\n"
+"PO-Revision-Date: 2012-01-06 17:10+0100\n"
+"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -15785,8 +15785,11 @@ msgstr "Chamane du désert"
 
 #. [unit_type]: id=Desert Shaman, race=elf
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:34
+#, fuzzy
 msgid "Desert Shamans focus on less violent ways to hinder the enemy."
 msgstr ""
+"Les chamans du désert se concentrent sur des moyens moins violents pour "
+"faire obstacle à l'ennemi."
 
 #. [attack]: type=impact
 #: data/campaigns/Under_the_Burning_Suns/units/elves/Desert_Shaman.cfg:50
