updated Estonian and German translation

--- a/po/wesnoth-manpages/et.po
+++ b/po/wesnoth-manpages/et.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3-svn\n"
 "POT-Creation-Date: 2012-01-06 12:00+0100\n"
-"PO-Revision-Date: 2011-12-30 19:39+0300\n"
+"PO-Revision-Date: 2012-01-07 19:15+0300\n"
 "Last-Translator: Kaido Kikkas <kakk@kakupesa.net>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -128,22 +128,12 @@ msgstr "määrab bittide arvu pikseli kohta. N: B<--bpp 32>"
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:49
-#, fuzzy, no-wrap
-#| msgid "B<-c, --campaign[[E<lt>difficultyE<gt>] E<lt>id_campaignE<gt> [E<lt>id_scenarioE<gt>]]>"
+#, no-wrap
 msgid "B<-c, --campaign \\ [E<lt>id_campaignE<gt>]>"
-msgstr "B<-c, --campaign[[E<lt>difficultyE<gt>] E<lt>id_campaignE<gt> [E<lt>id_scenarioE<gt>]]>"
+msgstr "B<-c, --campaign \\ [E<lt>id_campaignE<gt>]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:54
-#, fuzzy
-#| msgid ""
-#| "goes directly to the campaign based on the parameters.  The difficulty is "
-#| "a number between 1 and current campaign's difficulties number.  The "
-#| "default difficulty is 1.  The scenario must be one of the campaign's "
-#| "child scenarios. The default scenario is campaign's first scenario.  "
-#| "B<Note: When using this switch please ensure that you specify the data "
-#| "directory path as the final argument> aswell, otherwise the game will "
-#| "take the campaign/scenario id as the data dir."
 msgid ""
 "goes directly to the campaign with id E<lt>id_campaignE<gt>. A selection "
 "menu will appear if no id was specified.  B<Note:> When using this switch "
@@ -151,18 +141,16 @@ msgid ""
 "aswell, otherwise the game will take the campaign/scenario id as the data "
 "dir."
 msgstr ""
-"läheb parameetritest lähtudes otse sõjakäiku. Raskusaste on 1-st  sõjakäigu "
-"maksimaalse raskusastmeni, vaikimisi on 1. Stsenaarium on üks selle "
-"sõjakäigu stsenaariumitest, vaikimisi esimene.  B<Märkus: selle võtme "
-"kasutamisel lisa kindlasti viimase argumendina andmekataloogi asukoht> , "
-"vastasel juhul käsitleb mäng sõjakäigu või stsenaariumi nime kataloogina."
+"läheb otse vastavasse sõjakäiku. Kui pole määratud, avatakse valikumenüü.  "
+"B<Märkus: selle võtme kasutamisel lisa kindlasti viimase argumendina "
+"andmekataloogi asukoht> , vastasel juhul käsitleb mäng sõjakäigu või "
+"stsenaariumi nime kataloogina."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:54
-#, fuzzy, no-wrap
-#| msgid "B<--data-dir E<lt>directoryE<gt>>"
+#, no-wrap
 msgid "B<--campaign-difficulty E<lt>difficultyE<gt>>"
-msgstr "B<--data-dir E<lt>directoryE<gt>>"
+msgstr "B<--campaign-difficulty E<lt>difficultyE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:57
@@ -170,19 +158,21 @@ msgid ""
 "The difficulty of the specified campaign (1 to max). If none specified, the "
 "campaign difficulty selection widget will appear."
 msgstr ""
+"Valitud sõjakäigu raskusaste (1 kuni maksimaalne). Kui see pole määratud, "
+"avatakse raskusastme valik."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:57
 #, no-wrap
 msgid "B<--campaign-scenario E<lt>id_scenarioE<gt>>"
-msgstr ""
+msgstr "B<--campaign-scenario E<lt>id_scenarioE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:60
 msgid ""
 "The id of the scenario from the specified campaign. The default is the first "
 "scenario."
-msgstr ""
+msgstr "Valitud sõjakäigu stsenaariumi number. Vaikimisi on see 1."
 
 # type: TP
 #. type: TP
