--- a/po/wesnoth-manual/de.po
+++ b/po/wesnoth-manual/de.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.8\n"
-"POT-Creation-Date: 2012-01-03 10:55+0100\n"
-"PO-Revision-Date: 2011-12-09 13:45+0100\n"
+"POT-Creation-Date: 2012-01-06 11:46+0100\n"
+"PO-Revision-Date: 2011-12-29 13:25+0100\n"
 "Last-Translator: Gerfried Fuchs <rhonda@deb.at>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: \n"
@@ -1867,7 +1867,7 @@ msgstr "y"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1007
 msgid "Execute planned action"
-msgstr ""
+msgstr "Geplante Handlung durchführen"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1012
@@ -1877,7 +1877,7 @@ msgstr "h"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1015
 msgid "Delete planned action"
-msgstr ""
+msgstr "Geplante Handlung löschen"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1020
@@ -1908,7 +1908,7 @@ msgstr "Strg+y"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1039
 msgid "Execute all actions"
-msgstr ""
+msgstr "Alle Handlungen durchführen"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1044
@@ -1918,7 +1918,7 @@ msgstr "i"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1047
 msgid "Suppose dead"
-msgstr ""
+msgstr "Tod vermuten"
 
 # type: Content of: <book><chapter><section><section><section><title>
 #. type: Content of: <book><chapter><section><table><title>
@@ -1981,13 +1981,13 @@ msgstr "Strg+x"
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1099
 msgid "Clear messages"
-msgstr ""
+msgstr "Nachrichten löschen"
 
 #. type: Content of: <book><chapter><section><table><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:1109
 #: /src/wesnoth/doc/manual/manual.en.xml:1193
 msgid "Miscellaneous hotkeys"
-msgstr ""
+msgstr "Verschiedene Tastenkürzel"
 
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
@@ -2076,7 +2076,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1178
 msgid "f"
-msgstr ""
+msgstr "f"
 
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
 #: /src/wesnoth/doc/manual/manual.en.xml:1181
@@ -2298,7 +2298,7 @@ msgstr "Die Formel für die Berechnung der Einnahmen pro Zug ist daher"
 #: /src/wesnoth/doc/manual/manual.en.xml:1353
 #, no-wrap
 msgid "2 + villages − maximum(0, upkeep − villages)"
-msgstr "2 + Dörfer - Maximum(0, Unterhalt - Dörfer)"
+msgstr "2 + Dörfer – Maximum(0, Unterhalt – Dörfer)"
 
 # type: Content of: <book><chapter><section><section><simpara>
 #. type: Content of: <book><chapter><section><section><simpara>
