--- a/po/wesnoth-help/et.po
+++ b/po/wesnoth-help/et.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.4 Estonian translation\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-01-06 11:47+0100\n"
-"PO-Revision-Date: 2011-12-31 10:34+0300\n"
+"PO-Revision-Date: 2012-01-07 19:12+0300\n"
 "Last-Translator: Kaido Kikkas <kakk@kakupesa.net>\n"
 "Language-Team: Kaido Kikkas <kakk@kakupesa.net>\n"
 "Language: \n"
@@ -241,17 +241,12 @@ msgstr "Uus Maa"
 
 #. [topic]: id=new_continent
 #: data/core/encyclopedia/drakes.cfg:38
-#, fuzzy
-#| msgid ""
-#| "New Continent -- The great continent to the east of <ref>dst='morogor' "
-#| "text='Morogor'</ref>. Its existence is unknown to the drakes until the "
-#| "flight of Galun."
 msgid ""
 "The great continent to the east of <ref>dst='morogor' text='Morogor'</ref>. "
 "Its existence is unknown to the drakes until the flight of Galun."
 msgstr ""
-"Uus Maa - suur maismaa <ref>dst='morogor' text='Morogorist'</ref> ida pool. "
-"Lohed said sellest teada alles peale Galuni põgenemist."
+"Suur maismaa <ref>dst='morogor' text='Morogorist'</ref> ida pool. Lohed said "
+"sellest teada alles peale Galuni põgenemist."
 
 #. [topic]: id=abyss
 #: data/core/encyclopedia/drakes.cfg:43
@@ -1346,19 +1341,6 @@ msgstr "Värbamine ja tagasi kutsumine"
 
 #. [topic]: id=recruit_and_recall
 #: data/core/help.cfg:163
-#, fuzzy
-#| msgid ""
-#| "Each side begins with one leader in their keep. At the start of any "
-#| "battle, and at times during it, you will need to recruit <ref>dst='.."
-#| "units' text='units'</ref> into your army. To recruit, you must have your "
-#| "leader (for instance, Konrad in the <italic>text='Heir to the Throne'</"
-#| "italic> campaign) on the keep square of a <ref>dst='terrain_castle' "
-#| "text='castle'</ref>. Then you may recruit by either choosing "
-#| "<bold>text='Recruit'</bold> from the menu or right-clicking on a hex and "
-#| "selecting <bold>text='Recruit'</bold>. This brings up the recruit menu, "
-#| "which lists units available for recruitment, along with their gold cost. "
-#| "Click on a unit to see its statistics, then press the recruit button to "
-#| "recruit it."
 msgid ""
 "Each side begins with one leader in their keep. At the start of any battle, "
 "and at times during it, you will need to recruit <ref>dst='..units' "
@@ -1371,26 +1353,17 @@ msgid ""
 "recruitment, along with their gold cost. Click on a unit to see its "
 "statistics, then press the recruit button to recruit it."
 msgstr ""
-"Iga osapoole juht alustab stsenaariumi enda kindlusest. Lahingu tarvis on "
-"mängijal vaja värvata <ref>dst='..units' text='üksused'</ref>. Värbamiseks "
-"peab sinu pealik (näiteks Konrad Troonipärija sõjakäigus) asuma  "
-"<ref>dst='terrain_castle' text='kindluse'</ref> värbamisväljal. Seejärel "
-"vali käsk Värba kas mängu peamenüüst või tee paremklõps ühel kindluse väljal "
-"ja vali sama käsk ilmuvast menüüst.  Avaneb värbamismenüü, kus on kirjas "
-"saadaolevad üksused ja nende värbamiseks vajalik kullakogus. Üksuse info "
-"vaatamiseks klõpsa üksusel, värbamiseks klõpsa vastavat nuppu."
+"Iga osapool alustab stsenaariumi enda kindlusest ühe pealikuga. Lahingu "
+"tarvis on mängijal vaja värvata <ref>dst='..units' text='üksused'</ref>. "
+"Värbamiseks peab sinu pealik (näiteks Konrad Troonipärija sõjakäigus) asuma  "
+"<ref>dst='terrain_castle' text='kindluse'</ref> värbamisväljal (lossis). "
+"Seejärel vali käsk Värba kas mängu peamenüüst või tee paremklõps ühel "
+"kindluse väljal ja vali sama käsk ilmuvast menüüst.  Avaneb värbamismenüü, "
+"kus on kirjas saadaolevad üksused ja nende värbamiseks vajalik kullakogus. "
+"Üksuse info vaatamiseks klõpsa üksusel, värbamiseks klõpsa vastavat nuppu."
 
 #. [topic]: id=recruit_and_recall
 #: data/core/help.cfg:165
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "\n"
-#| "If you right-clicked on a castle hex and selected recruit, the new unit "
-#| "will appear in that square. Otherwise, it will appear in a free square "
-#| "near the keep. You may only recruit as many units as you have free hexes "
-#| "in your castle, and you cannot spend more gold than you actually have on "
-#| "recruiting."
 msgid ""
 "\n"
 "\n"
@@ -1401,10 +1374,11 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"Paremklõps lossi mõnel väljal ja värbamiskäsk toob soovitud üksuse sellesse "
-"välja, menüüst valides võib see ilmuda mõnda vabasse välja lossi lähedal. "
-"Värvata saad vaid nii mitu üksust, kui palju on lossis vabasid välju, samuti "
-"peab sul olema iga üksuse jaoks piisavalt kulda."
+"Paremklõps kindluse mõnel väljal ja värbamiskäsk toob soovitud üksuse "
+"sellesse välja, menüüst valides võib see ilmuda mõnda vabasse välja keskse "
+"lossi lähedal. Värvata saad vaid nii mitu üksust, kui palju on kindluses "
+"vabasid välju, samuti peab sul olema iga värvatava üksuse jaoks piisavalt "
+"kulda."
 
 #. [topic]: id=recruit_and_recall
 #: data/core/help.cfg:167
@@ -2978,17 +2952,6 @@ msgstr "Loss"
 
 #. [topic]: id=terrain_castle
 #: data/core/help.cfg:614
-#, fuzzy
-#| msgid ""
-#| "<italic>text='Castles'</italic> are any sort of permanent fortification. "
-#| "Nearly all units receive a considerable bonus to their defense by being "
-#| "stationed in a castle, and all units receive full movement in a castle. "
-#| "Stationing units in a castle represents its defensive capability. Without "
-#| "a unit in each wall hex, an enemy can simply sneak into the castle "
-#| "unchallenged, gaining the same defensive bonus as everyone inside.\n"
-#| "\n"
-#| "Most units have about 60% defense in a castle.\n"
-#| "\n"
 msgid ""
 "<italic>text='Castles'</italic> are any sort of permanent fortification. "
 "Nearly all units receive a considerable bonus to their defense by being "
@@ -3000,8 +2963,8 @@ msgid ""
 "Most units have about 60% defense in a castle.\n"
 "\n"
 msgstr ""
-"Kindlused on püsivalt ehitatud kindlustused. Peaaegu kõik üksused saavad "
-"lossis märgatava kaitsevõimepreemia ja täieliku liikumisvõime. Kindluse "
+"Kindlused on igasugused püsikindlustused. Peaaegu kõik üksused saavad seal "
+"märgatava kaitsevõimepreemia ja enamasti ka täieliku liikumisvõime. Kindluse "
 "kaitsevõime sõltub tema täituvusest - kui kindlus pole mehitatud, võib "
 "vastane tungida sinna ja saada ka enda üksustele sama kaitsevõime. \n"
 "\n"
